Get arrows to appear on screen in correct position/alignment, still non-functional

--- a/src/components/product-overview/ProductOverview.css
+++ b/src/components/product-overview/ProductOverview.css
@@ -35,7 +35,7 @@
 }
 
 .arrow:hover{
-    box-shadow: 1px 1px 1px 1px gray;
+    text-shadow: gray;
 }
 #zoomedImage{
     -moz-transform: scale(2.5);
